[gd_scene load_steps=8 format=3 uid="uid://dg1oaw5e07q3t"]

[ext_resource type="Script" uid="uid://dk1km0h15aqiv" path="res://stage2/breakable_pipe.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dykthdh64lvpx" path="res://icon.svg" id="2"]
[ext_resource type="PackedScene" uid="uid://1rqgyhaaymqq" path="res://stage2/glass.tscn" id="3_p88xf"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 330)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(32, 100)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(32, 150)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(32, 150)

[node name="BreakablePipe" type="Area2D" groups=["pipe_collision"]]
script = ExtResource("1")

[node name="TopSprite" type="Sprite2D" parent="."]
position = Vector2(-16, -530)
scale = Vector2(0.25, 2.5781252)
texture = ExtResource("2")
centered = false

[node name="TopCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -365)
shape = SubResource("1")

[node name="BottomSprite" type="Sprite2D" parent="."]
position = Vector2(-16, 200)
scale = Vector2(0.25, 2.5781252)
texture = ExtResource("2")
centered = false

[node name="BottomCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 365)
shape = SubResource("1")

[node name="MiddleSprite" type="Sprite2D" parent="."]
position = Vector2(-16, -50)
scale = Vector2(0.25, 0.78125)
texture = ExtResource("2")
centered = false

[node name="MiddleCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.81)
shape = SubResource("2")

[node name="Answer1" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -150.0
offset_right = 20.0
offset_bottom = -105.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "67"
horizontal_alignment = 1

[node name="Answer2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 100.0
offset_right = 20.0
offset_bottom = 145.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "42"
horizontal_alignment = 1

[node name="UpperBlocker" type="CollisionShape2D" parent="."]
position = Vector2(0, -125)
shape = SubResource("3")

[node name="LowerBlocker" type="CollisionShape2D" parent="."]
position = Vector2(0, 125)
shape = SubResource("4")

[node name="UpperGlass" parent="." instance=ExtResource("3_p88xf")]
position = Vector2(0, -125)

[node name="LowerGlass" parent="." instance=ExtResource("3_p88xf")]
position = Vector2(0, 120)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
